--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "fuse.js": "^6.4.6",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
